--- a/alan/home.html
+++ b/alan/home.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 		<div id="header">
-			<h2>ALAN RAGA PHOTOGRAPHY</h2>
+			<h2><a href="#home">ALAN RAGA PHOTOGRAPHY</a></h2>
 		</div>	
 
 	
-		<div class="bg">
+		<div class="bg" id="home">
 		</div>
 	
 		<div class="about" id="about">
@@ -48,11 +48,7 @@
 
 		</div>
 
-		<div class="contact" id="contact">
-			<br/>
-  			<h5>email : alan@alanraga.com  
-    			&#124;     mobile : 0277232573</h5>
-		</div>
+		
 
 <div id="cssSlider">
   <div id="sliderImages">
@@ -65,13 +61,23 @@
 	</div>
 </div>
 
+		<div class="contact" id="contact">
+			<br/>
+			<h4>Contact Details</h4> <br/>
+  			<strong><h5>Email: alan@alanraga.com</h5>  
+    			  <h5>Mobile: 0277232573</h5></strong>
+		</div>
+
 	<div id="footer">
 			<h6><a href="#about">ABOUT  &#124;</a>
 			<a href="#services"> SERVICES  &#124;</a>
 			<a href="#contact"> CONTACT</a></h6>
 			
-	</div>		
-	<p>Copyright &#169; 2015. All rights reserved by Alan Raga.</p>
+	</div>
+	<footer>
+		<p>Copyright &#169; 2015. All rights reserved by Alan Raga.</p>
+	</footer>		
+	
 	<script src="js/main.js"></script>
 </body>
 </html>
