--- a/alan/home.html
+++ b/alan/home.html
@@ -43,8 +43,8 @@
 		    	</figcaption>
 		    </figure>
 
-		    <h4><br/><br/> Let me capture every important events and people in your life. Services include Photo Coverage of <strong> Weddings, Family Portraits, Family Occassions, and Other Events. </strong></h4>
-			<h4> All photos are of <strong>professional quality</strong> and available in digital format or print. Nature and Landscape Photographs are also available in print. Prices may vary depending on the size. <br/><br/></h4>
+		    <h4 class="seventy"><br/><br/> Let me capture every important events and people in your life. Services include Photo Coverage of <strong> Weddings, Family Portraits, Family Occassions, and Other Events. </strong></h4>
+			<h4 class="seventy"> All photos are of <strong>professional quality</strong> and available in digital format or print. Nature and Landscape Photographs are also available in print. Prices may vary depending on the size. <br/><br/></h4>
 
 		</div>
 
